# speech_to_text

./: CMakeLists.txt  README.md  package.xml  pocket_sphinx_install.sh
launch/: speechToText.launch
scripts/: ros_voice_control.py  speechToText.py
vocab/: stt.dic
