<package>
  <name>speech_to_text</name>
  <version>0.0.0</version>
  <description>
    This package is a simple wrapper around the pocketsphinx speech recognizer, 
    using gstreamer and a Python-based interface. 
  </description>
  <author>Michael Simmons</author>
  <maintainer email="michaelsimmons94@gmail.com">Michael Simmons</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>geometry_msgs</run_depend><!-- only needed for demos -->
  <run_depend>gstreamer0.10-pocketsphinx</run_depend>
  <run_depend>python-gst</run_depend>
</package>